--- a/css/styles.css
+++ b/css/styles.css
@@ -376,10 +376,11 @@ a {
   height: 100%;
   border-radius: 50%;
   background-color: var(--brand-color);
+  color: var(--white-color);
 }
 
 .social-item-icon {
-  fill: var(--white-color);
+  fill: currentColor;
 }
 
 .socialweb-link:is(:hover, :focus) {
@@ -489,9 +490,53 @@ a {
 
 /* ----------------Footer---------------- */
 
+.footer-all {
+  display: flex;
+}
+
 .footer-box {
   flex-direction: column;
   width: 264px;
+  margin-right: 120px;
+}
+
+.footer-socialweb-box-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  color: var(--white-color);
+  margin-bottom: 16px;
+}
+
+.footer-socialwebs-list {
+  display: flex;
+  gap: 16px;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+}
+.footer-socialweb-item {
+  width: 40px;
+  height: 40px;
+}
+.footer-socialweb-link {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-content: center;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: rgba(255, 255, 255, 0.1);
+  color: var(--white-color);
+}
+
+.footer-social-item-icon {
+  fill: currentColor;
+}
+
+.footer-socialweb-link:is(:hover, :focus) {
+  background-color: var(--pressed-state);
 }
 
 .underground {
