--- a/css/styles.css
+++ b/css/styles.css
@@ -421,17 +421,31 @@ a {
 }
 
 .customers-icon-box {
-  padding: 16px 32px;
+  width: 168px;
+  height: 88px;
+}
+
+.customer-icon-link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  color: var(--subtle-text-color);
   border: 1px solid var(--subtle-text-color);
   border-radius: 4px;
 }
 
-.customers-icon-box:hover {
+.customer-icon-link:is(:hover, :focus) {
   color: var(--pressed-state);
   border: 1px solid var(--pressed-state);
 }
 
-.customers-icon:hover .customers-icon {
+.customers-icon {
+  fill: currentColor;
+}
+
+.customers-icon:is(:hover, :focus) {
   fill: currentColor;
 }
 
