--- a/css/styles.css
+++ b/css/styles.css
@@ -378,8 +378,8 @@ a {
 .socialweb-link {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
-  align-content: center;
+
+  align-items: center;
   width: 100%;
   height: 100%;
   border-radius: 50%;
