--- a/css/styles.css
+++ b/css/styles.css
@@ -429,7 +429,7 @@ a {
   width: 100%;
   height: 100%;
   color: var(--subtle-text-color);
-  border: 1px solid var(--subtle-text-color);
+  border: 1px solid currentColor;
   border-radius: 4px;
 }
 
