--- a/css/styles.css
+++ b/css/styles.css
@@ -527,7 +527,8 @@ a {
   background-color: var(--pressed-state);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
-  border: transparent;
+  border: 1px solid var(--accent-color);
+  border-color: transparent;
 }
 
 .cards-block {
